# modalite

./: .gitignore  README.md  manage.py  mes_requetes.py  modalite.json  modalite.json.bz2  modalite_prod2django.py  pyproject.toml
imagerie/: admin.py  adminextra.py  apps.py  forms.py  models.py  ping_all_update.py  updater.py  urls.py  views.py
imagerie/migrations/: 0001_initial.py  0002_alter_modalite_printer_alter_modalite_store.py  0003_alter_modalite_net_alter_pacs_net_alter_printer_net_and_more.py  0004_alter_pacs_net_alter_printer_net_alter_store_net_and_more.py  0005_localisation.py  0006_remove_modalite_nom_modalite_appareil_and_more.py  0007_modalite_loc.py  0008_alter_modalite_net.py  0009_alter_modalite_printer_alter_modalite_store.py  0010_alter_modalite_store.py  0011_alter_modalite_store.py  0012_remove_modalite_printer_remove_modalite_store_and_more.py  0013_rename_masq_net_mask.py  0014_rename_mask_net_mask.py  0015_remove_net_vlan_remove_modalite_net_remove_pacs_net_and_more.py  0016_modalite_serveur.py  0017_modalite_unique_dicom.py  0018_alter_modalite_serveur.py  0019_bdd_contact_identifiant_connect_modalite_connect_and_more.py  0020_remove_bdd_projet_remove_hard_modedegrade_and_more.py  0021_remove_projet_hard_remove_soft_referent_projet_hards_and_more.py  0022_alter_hard_options_rename_nom_hard_description_and_more.py  0023_alter_bdd_unc.py  0024_alter_hard_description.py  0025_rename_os_soft_demande_soft_fournisseur_soft_softs_and_more.py  0026_remove_soft_softs_soft_licence_soft_validité.py  0027_connect_nom.py  0028_remove_modalite_connect_connection_and_more.py  0029_alter_bdd_identifiant_alter_resspartage_identifiant.py  0030_remove_modalite_soft_modalite_soft.py  0031_alter_modalite_soft.py  0032_modalite_reforme.py  0033_modalite_commentaire.py  0034_alter_bdd_nom_alter_connection_nom_and_more.py  0035_modalite_ping.py  0036_modalite_recent_ping.py  0037_modalite_first_ping.py  (+17 more)
modalite/: asgi.py  settings.py  urls.py  wsgi.py
(+33 files in other folders)
