[tool.poetry]
name = "repos-modalite"
version = "0.1.0"
description = ""
authors = ["kligliro <kliglich.romuald@free.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django-extensions = "^3.2.3"
mysqlclient = "^2.2.5"
django-debug-toolbar = "^4.4.6"
ping3 = "^4.0.8"
django-htmx = "^1.21.0"
aioping = "^0.4.0"

[tool.poetry.group.dev.dependencies]
Django = "^5.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
