[tool.poetry]
name = "repos-modalite"
version = "0.1.0"
description = ""
authors = ["kligliro <kliglich.romuald@free.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django-extensions = "^3.2.3"
mysqlclient = "^2.2.5"
django-debug-toolbar = "^4.4.6"
ping3 = "^4.0.8"
django-htmx = "^1.21.0"
aioping = "^0.4.0"
djangorestframework = "^3.15.2"
markdown = "^3.7"
django-filter = "^25.1"
django-cors-headers = "^4.7.0"
requests = "^2.32.3"
pynetdicom = "^2.1.1"
apscheduler = "^3.11.0"
whitenoise = "^6.9.0"
django-simple-history = "^3.8.0"
daphne = "^4.2.0"
django = "^5.1.2"
django-macaddress = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
